--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,7 +1,7 @@
 # Note: You must restart bin/webpack-dev-server for changes to take effect
 
 default: &default
-  source_path: app/javascript
+  source_path: app/frontend
   source_entry_path: packs
   public_root_path: public
   public_output_path: packs
@@ -10,7 +10,7 @@ default: &default
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
-  additional_paths: []
+  resolved_paths: []
 
   # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
@@ -33,10 +33,14 @@ default: &default
     - .woff2
 
   extensions:
+    - .erb
+    - .vue
     - .mjs
     - .js
+    - .js.erb
     - .sass
     - .scss
+    - .scss.erb
     - .css
     - .module.sass
     - .module.scss
@@ -55,9 +59,9 @@ development:
   dev_server:
     https: false
     host: localhost
-    port: 3035
-    public: localhost:3035
-    hmr: false
+    port: 3036
+    public: localhost:3036
+    hmr: true
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
@@ -68,25 +72,24 @@ development:
     pretty: false
     headers:
       'Access-Control-Allow-Origin': '*'
+      'Access-Control-Allow-Methods': 'GET, POST, PUT, DELETE, PATCH, OPTIONS'
+      'Access-Control-Allow-Headers': 'X-Requested-With, content-type, Authorization'
     watch_options:
       ignored: '**/node_modules/**'
-
 
 test:
   <<: *default
   compile: true
-
-  # Compile test packs to a separate directory
   public_output_path: packs-test
+
+staging:
+  <<: *default
+  compile: false
+  extract_css: true
+  cache_manifest: true
 
 production:
   <<: *default
-
-  # Production depends on precompilation of packs prior to booting for performance.
   compile: false
-
-  # Extract and emit a css file
   extract_css: true
-
-  # Cache manifest.json for performance
   cache_manifest: true
