Add search vue component and basic teams new view

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "@rails/webpacker": "5.2.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9",
-    "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "turbolinks": "^5.2.0",
     "dayjs": "^1.8.28",
     "debounce": "^1.2.0",
+    "domurl": "^2.3.4",
     "nprogress": "^0.2.0",
+    "postcss": "^7",
     "rails-erb-loader": "^5.5.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "turbolinks": "^5.2.0",
     "uuid": "^8.3.0",
     "v-click-outside": "^3.1.2",
     "vue": "^2.6.11",
