--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,22 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  encoding: utf-8
+  port: <%= ENV.fetch('DB_PORT') { 5432 } %>
+  host: <%= ENV.fetch('DB_HOST') { 'localhost' } %>
+  pool: <%= ENV.fetch('DB_POOL') { 5 } %>
+  adapter: <%= ENV.fetch('DB_ADAPTER') { 'postgresql' } %>
+  username: <%= ENV.fetch('DB_USERNAME') { 'teambuilder' } %>
+  password: <%= ENV.fetch('DB_PASSWORD') { 'teambuilder' } %>
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV.fetch('DB_NAME') { 'teambuilder_dev' } %>
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: <%= ENV.fetch('DB_NAME') { 'teambuilder_test' } %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV.fetch('DB_NAME') { 'teambuilder_production' } %>
+  variables:
+    statement_timeout: 5000
