--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-loader": "^15.9.3",
     "vue-local-scope": "^0.0.1",
     "vue-template-compiler": "^2.6.11",
+    "vue-toast-notification": "^0.6.0",
     "vue2-touch-events": "^2.2.1"
   },
   "version": "0.1.0",
