--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-fragment": "^1.5.1",
     "vue-loader": "^15.9.3",
     "vue-local-scope": "^0.0.1",
+    "vue-share-buttons": "^1.1.0",
     "vue-template-compiler": "^2.6.11",
     "vue-toast-notification": "^0.6.0",
     "vue2-touch-events": "^2.2.1"
